InputEvent.inputType is null when triggering Bold/Italic/Underline using execCommand https://bugs.webkit.org/show_bug.cgi?id=201128

Reviewed by Wenson Hsieh.

The bug was caused by applyCommandToFrame not specifying EditAction for execCommand.
Also fixed the bug that FontName, FontSize, and FontSizeDelta were enabled in plain text context.
Without this fix, we'd hit assertions inside CompositeEditCommand::apply.

* LayoutTests/editing/execCommand/enabling-and-selection-expected.txt:
* LayoutTests/editing/execCommand/enabling-and-selection.html:
* LayoutTests/fast/events/input-events-fomat-bold-expected.txt: Added.
* LayoutTests/fast/events/input-events-fomat-bold.html: Added.
* LayoutTests/fast/forms/plaintext-mode-1-expected.txt:
* LayoutTests/fast/forms/plaintext-mode-1.html:

* Source/WebCore/editing/EditorCommand.cpp:
(WebCore::applyCommandToFrame):
(WebCore::createCommandMap):

Canonical link: https://commits.webkit.org/255331@main